--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,9 @@ buildscript {
 }
 
 apply plugin: 'java'
-//apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'maven-publish'
 
 project.version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -27,21 +27,28 @@ jar {
 
 repositories {
     mavenCentral()
-//    maven { url "http://dl.bintray.com/ethereum/maven" }
+    maven { url "http://dl.bintray.com/ethereum/maven" }
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        mavenLocal()
+    }
+}
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter')
-    runtime('org.springframework.boot:spring-boot-devtools')
-    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework:spring-context')
     compile('io.springfox:springfox-swagger2:2.6.1')
     compile('io.springfox:springfox-swagger-ui:2.6.1')
     compile('org.projectlombok:lombok')
-
-//    compile('org.ethereum:ethereumj-core:1.3.1-RELEASE') {
-//        exclude group: "org.slf4j", module: "slf4j-log4j12"
-//    }
+    compile('org.ethereum:ethereumj-core:1.3.1-RELEASE') {
+        exclude group: "org.slf4j", module: "slf4j-log4j12"
+    }
 
     testCompile("org.springframework.boot:spring-boot-starter-test") {
         exclude module: "spock-core"
