--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,9 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'maven-publish'
 
-project.version = '0.0.1-SNAPSHOT'
+project.version = '0.0.2-SNAPSHOT'
 sourceCompatibility = 1.8
 
 jar {
@@ -42,10 +41,12 @@ publishing {
 }
 
 dependencies {
-    compile('org.springframework:spring-context')
+    compile('org.springframework:spring-core:4.3.7.RELEASE')
+    compile('org.springframework:spring-context:4.3.7.RELEASE')
+    compile('org.springframework:spring-web:4.3.7.RELEASE')
     compile('io.springfox:springfox-swagger2:2.6.1')
     compile('io.springfox:springfox-swagger-ui:2.6.1')
-    compile('org.projectlombok:lombok')
+    compile('org.projectlombok:lombok:1.16.18')
     compile('org.ethereum:ethereumj-core:1.3.1-RELEASE') {
         exclude group: "org.slf4j", module: "slf4j-log4j12"
     }
