--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,11 @@ jobs:
 
       - run: gradle build
 
-      - store_artifacts:
-          path: build/libs/*.jar
-
       - persist_to_workspace:
          root: build
          paths:
            - libs
+           - build.gradle
 
   deploy:
     <<: *defaults
